--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
     "start": "node src/",
-    "start-prod": "NODE_ENV=production node src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
@@ -37,12 +36,28 @@
     "feathers-socketio": "^1.4.2",
     "mongoose": "^4.7.1",
     "passport": "^0.3.2",
+    "react": "^15.4.1",
+    "react-codemirror": "^0.3.0",
+    "react-dom": "^15.4.1",
     "serve-favicon": "^2.3.2",
     "winston": "^2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "html-webpack-plugin": "^2.24.1",
     "jshint": "^2.9.4",
     "mocha": "^3.2.0",
-    "request": "^2.79.0"
+    "node-sass": "^3.13.0",
+    "request": "^2.79.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
