--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^4.7.1",
     "passport": "^0.3.2",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
     "serve-favicon": "^2.3.2",
